--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
+    <link rel="icon" href="/actufootv2.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="/src/style.css" rel="stylesheet">
-    <title>ActuFoot360-V2</title>
+    <title>CyberFoot</title>
   </head>
   <body>
     <div id="app"></div>
